# AddPDFBookmarks

./: PDFHandler.py  README.md  pyproject.toml
src/: pdfhandler.py  tools.py
