[tool.poetry]
name = "AddPDFBookmarks"
version = "0.1.0"
description = "Add bookmarks to PDF file according to the bookmark file."
authors = ["Tsui <runfengtsui@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
chardet = "^5.1.0"
pikepdf = "^7.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
